--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -15,6 +15,8 @@
     "@next/mdx": "^15.3.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@supabase/auth-js": "^2.70.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.80.7",
     "@types/mdx": "^2.0.13",
