--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -21,7 +21,10 @@
     "@tanstack/react-query": "^5.80.7",
     "@types/mdx": "^2.0.13",
     "babylonjs-hook": "^0.1.1",
+    "contentlayer2": "^0.5.8",
+    "date-fns": "^4.1.0",
     "next": "15.3.3",
+    "next-contentlayer2": "^0.5.8",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
