--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev:web": "pnpm --filter web dev",
-    "dev:api": "cd apps/api && sh dev.sh"
+    "dev:api": "cd apps/api && sh dev.sh",
+    "test:web": "cd apps/web && pnpm test"
   }
 }
