--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "next": "15.3.3",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
