--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mysticalrealms",
   "version": "0.1.0",
   "private": true,
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "dev:web": "pnpm --filter web dev",
     "dev:api": "cd apps/api && sh dev.sh",
