--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -2,12 +2,12 @@ services:
   web:
     build:
       context: .
-      dockerfile: docker/web.dev.Dockerfile
+      dockerfile: web.dev.Dockerfile
     working_dir: /app/apps/web
     ports:
       - "3000:3000"
     volumes:
-      - ./apps/web:/app/apps/web
+      - ../apps/web:/app/apps/web
       - web_node_modules:/app/node_modules
     environment:
       - NODE_ENV=development
@@ -20,12 +20,12 @@ services:
   api:
     build:
       context: .
-      dockerfile: docker/api.dev.Dockerfile
+      dockerfile: api.dev.Dockerfile
     working_dir: /app
     ports:
       - "5555:5555"
     volumes:
-      - ./apps/api:/app
+      - ../apps/api:/app
     command: uvicorn main:app --host 0.0.0.0 --port 5555 --reload
     environment:
       - PYTHONUNBUFFERED=1
