feat: Enhance authentication flow and profile setup
- Fixed infinite loading issues on dashboard and profile pages by improving loading state management in the useAuth hook.
- Updated signup and signin actions to redirect users to profile setup if their profiles are incomplete.
- Implemented automatic profile creation for new users during signup.
- Modified profiles table schema to allow NULL usernames initially, enforcing constraints only when usernames are provided.
- Improved user feedback and navigation during loading states across various components.
- Added comprehensive testing for authentication flow and profile completion.
- Created deployment script for database migration and testing instructions.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev:web": "pnpm --filter web dev",
     "dev:api": "cd apps/api && sh dev.sh",
-    "test:web": "cd apps/web && pnpm test"
+    "test:web": "cd apps/web && pnpm test",
+    "test:web:coverage": "cd apps/web && pnpm test:coverage",
+    "test:web:e2e": "cd apps/web && pnpm test:e2e"
   }
 }
